@@ -14,6 +14,7 @@ v3.9.0-beta.1 (woocommerce-improvements)
 - New: WooCommerce - Added show/hide cart total badge option.
 - Improvement: WooCommerce - Modify the Cart label section via Shortcodes. (Needs Doc)
 - Improvement: Introduced filter 'astra_stretched_layout_with_spacing' to exclude Stretched layout around spacing CSS. ( https://wpastra.com/docs/improved-block-editor-experience/ )
+- Improvement: Introduced filter 'astra_get_store_sidebar_layout' to extend sidebar option for the WooCommerce layout.
 - Fix: WooCommerce - Margin issue for single shop page with the Full width & Contained Layout.
 
 v3.8.5 (Unreleased)
